data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4580.wast
;; 9. **Incorrect Function Type in Loop Exit**:     - Place `call_indirect` inside a loop’s body and ensure a mismatched function type upon loop exit.     - **Constraint**: Loop must correctly handle types at every exit point.     - **Test Relation**: Tests correct type checking and trapping on loop iteration end.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $expectedFunc (type 0) (param i32) (result i32) (local.get 0))
    (func $test
      (loop
        (call_indirect (type 0) (i32.const 0) (i32.const 1))
        br 0
      )
    )
  )
  "type mismatch"
)